--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.phoenix">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -9,6 +10,10 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <!-- Google Maps API Key - Required for react-native-maps on Android -->
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyBBx0ut-P20NTqFOFm_m51Ir8SCSurMwCE"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
