--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,18 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# Suppress compileSdk warning for SDK 34
+android.suppressUnsupportedCompileSdk=34
+
+# Set Java version for Gradle
+# The jbr directory is Java 21, but Gradle 7.6.1 needs Java 17
+# Find Java 17 and set the path here:
+# org.gradle.java.home=C:\\path\\to\\java17
+# 
+# To find Java 17:
+# 1. Open Android Studio
+# 2. File → Settings → Build Tools → Gradle
+# 3. Click "Gradle JDK" → "Download JDK"
+# 4. Select Version 17, Vendor: JetBrains Runtime
+# 5. Copy the path and set it above
